@@ -1,6 +1,7 @@
 2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
-	* uri-rfc2396.test: Added constraint 'knownBug' to these tests.
+	* uri-rfc2396.test: Added constraint 'knownBug' to these
+	  tests. And reference to [#581781].
 
 2003-04-11  Andreas Kupries  <andreask@activestate.com>
 
